# pg_tde

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  COPYRIGHT  Makefile  Makefile.in  Makefile.tools  README.md  SECURITY.md  configure  configure.ac  keyring-vault.json  keyring.json  meson.build  meson_options.txt  mkdocs.yml  pg.patch  pg_tde--1.0.sql  pg_tde--2.0--2.1.sql  pg_tde--2.1--2.2.sql  pg_tde.conf  pg_tde.control  pgindent_exclude  shsplit  testwrap  typedefs.list  versions.json
.github/: CODEOWNERRS  CODEOWNERS  codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-and-test.yml  codechecker.yml  coverage.yml  doc-build.yaml  docker-push-tde-image.yaml  docker-test-image.yaml  docker.yaml  docs.yaml  make.yml  matrix.yml  pgindent.yml  postgresql-16-pgdg-package-pgxs.yml  postgresql-16-ppg-package-pgxs.yml  postgresql-16-src-make-macos.yml  postgresql-16-src-make-ssl11.yml  postgresql-16-src-make.yml  postgresql-16-src-meson-macos.yml  postgresql-16-src-meson-perf.yml  postgresql-16-src-meson.yml  postgresql-17-src-make.yml  postgresql-17-src-meson-perf.yml  postgresql-17-src-meson.yml  postgresql-perf-results.yml  postgresql-pgdg-package-pgxs.yml  sanitizers.yml  scorecard.yml  stormweaver.yml
ci_scripts/: build-and-install-psp.sh  build.sh  configure-global-tde.sh  dump-typedefs.sh  env.sh  macos-deps.sh  make-build.sh  make-test-global-tde.sh  make-test.sh  run-clang-format.sh  run-pgindent.sh  setup-keyring-servers.sh  test.sh  ubuntu-deps.sh
ci_scripts/suppressions/: lsan.supp
docker/: Dockerfile  pg-tde-streaming-repl.sh
docs/: index.md  tde.md
documentation/: CONTRIBUTING.md  Documentation-contribution.md  documentation-contributing.md  functions.md  mkdocs.yml  requirements.txt  variables.yml
documentation/docs/: apt.md  contribute.md  decrypt.md  faq.md  features.md  functions.md  index.md  install.md  replication.md  setup.md  switch.md  tde.md  test.md  uninstall.md  variables.md  wal-encryption.md  yum.md
expected/: change_access_method.out  change_access_method_1.out  create_database_tablespace.out  default_principal_key.out  delete_principal_key.out  insert_update_delete.out  join.out  key_provider.out  key_provider_1.out  keyprovider_dependency.out  move_large_tuples.out  multi_insert.out  non_sorted_off_compact.out  partition_table.out  partition_table_1.out  pg_tde_is_encrypted.out  pg_tde_is_encrypted_1.out  pgtde_is_encrypted.out  recreate_storage.out  subtransaction.out  tablespace.out  tablespace_basic.out  tablespace_marker_api.out  tablespace_marker_ddl_interaction.out  tablespace_marker_emptiness.out  tablespace_prototype.out  tablespace_prototype_alter_reindex.out  tablespace_prototype_alter_tablespace.out  tablespace_prototype_enforce.out  tablespace_prototype_index.out  tablespace_prototype_partition.out  tablespace_prototype_principal_key.out  test_issue_153_fix.out  toast_decrypt.out  toast_extended_storage.out  trigger_on_view.out  update.out  update_compare_indexes.out  vault_v2_test.out  version.out  (+3 more)
fetools/pg16/: xlogreader.c
fetools/pg17/: xlogreader.c
fetools/pg18/: xlogreader.c
main/: 404.html  apt.html  contribute.html  decrypt.html  external-parameters.html  faq.html  features.html  functions.html  get-help.html  index.html  install.html  replication.html  setup.html  switch.html  table-access-method.html  tde.html  test.html  uninstall.html  yum.html
main/release-notes/: release-notes.html
main/search/: search_index.json
pg_tde/: pg_tde_io.c  pg_tde_prune.c  pg_tde_rewrite.c  pg_tde_vacuumlazy.c  pg_tde_visibilitymap.c  pg_tdeam.c  pg_tdeam_handler.c  pg_tdeam_visibility.c  pg_tdetoast.c
sql/: change_access_method.sql  create_database_tablespace.sql  default_principal_key.sql  insert_update_delete.sql  join.sql  keyprovider_dependency.sql  merge_join.inc  move_large_tuples.sql  multi_insert.sql  non_sorted_off_compact.sql  pg_tde_is_encrypted.sql  pgtde_is_encrypted.sql  tablespace.inc  tablespace.sql  tablespace_marker_api.sql  tablespace_marker_ddl_interaction.sql  tablespace_marker_emptiness.sql  tablespace_prototype.sql  tablespace_prototype_alter_reindex.sql  tablespace_prototype_alter_tablespace.sql  tablespace_prototype_enforce.sql  tablespace_prototype_index.sql  tablespace_prototype_partition.sql  tablespace_prototype_principal_key.sql  test_issue_153_fix.sql  toast_decrypt.sql  toast_extended_storage.sql  trigger_on_view.sql  update.sql  update_compare_indexes.sql  vault_v2_test.sql  version.sql  xlog_fork_multi_insert.sql
src/: Makefile  pg_tde.c  pg_tde_event_capture.c  pg_tde_fe.c  pg_tde_guc.c  pg_tde_shmem.c
src/access/: heapam.c  heapam_handler.c  hio.c  pg_tde_ddl.c  pg_tde_slot.c  pg_tde_tdemap.c  pg_tde_xlog.c  pg_tde_xlog_encrypt.c  pg_tde_xlog_keys.c  pg_tde_xlog_smgr.c  pg_tdeam.c  pg_tdeam_handler.c  pg_tdetoast.c  rewriteheap.c
src/catalog/: tde_global_catalog.c  tde_global_space.c  tde_keyring.c  tde_keyring_parse_opts.c  tde_master_key.c  tde_principal_key.c  tt
src/common/: pg_tde_shmem.c  pg_tde_utils.c  tde_tablespace.c
t/: 001_basic.pl  002_rotate_key.pl  003_remote_config.pl  004_file_config.pl  005_multiple_extensions.pl  007_access_control.pl  008_tde_heap.pl  2pc_replication.pl  CosmianKms.pm  RewindTest.pm  basebackup_default_key.pl  basic.pl  change_key_provider.pl  crash_recovery.pl  default_principal_key.pl  key_rotate_tablespace.pl  key_validation.pl  keys_update.pl  kmip.pl  multiple_extensions.pl  pg_basebackup.pl  pg_resetwal_basic.pl  pg_resetwal_corrupted.pl  pg_rewind_basic.pl  pg_rewind_databases.pl  pg_rewind_enc_copy_blocks.pl  pg_rewind_enc_ext_tablespace.pl  pg_rewind_enc_fsm.pl  pg_rewind_enc_keep_archive_wal.pl  pg_rewind_enc_keep_wal_seg.pl  pg_rewind_enc_rel_segment.pl  pg_rewind_enc_unchanged_rel.pl  pg_rewind_growing_files.pl  pg_rewind_keep_recycled_wals.pl  pg_rewind_min_recovery_point.pl  pg_rewind_options.pl  pg_tde_change_key_provider.pl  pg_tde_checksums.pl  pg_tde_upgrade.pl  pg_upgrade.pl  (+21 more)
tools/: copy_fetools.sh
(+156 files in other folders)
